fixed overflow

--- a/src/containers/LandingPage/LandingPage.module.css
+++ b/src/containers/LandingPage/LandingPage.module.css
@@ -44,7 +44,7 @@
 }
 
 html{
-    overflow-y: hidden;
+    overflow-x: hidden;
 }
 
 .showcase {
